CatalogCommand에서 productName을 기반으로 ㅁ요청하는 코드 작성